# custos

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  tailwind.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
alembic/: env.py
alembic/versions/: 001_enable_timescaledb.py  002_create_raw_readings.py  003_create_features.py  004_create_labels.py  005_rename_to_tag_terminology.py  006_create_tags_table.py  007_create_connection_profiles.py  008_create_asset_templates.py  009_create_asset_instances.py  010_create_tag_bindings.py  011_create_thresholds.py  012_create_alarm_events.py  013_create_audit_log.py  014_create_kpi_results.py  015_create_anomaly_scores.py  016_create_push_subscriptions.py  017_create_overview_chart_tags.py  018_create_overview_charts.py  019_add_overview_chart_time_window.py  020_create_maintenance_checklists.py  021_create_maintenance_schedules.py  022_create_maintenance_tasks.py  023_create_alarm_checklist_mappings.py  024_timescaledb_hardening.py  025_create_continuous_aggregates.py  026_create_retention_config.py  027_create_users_sessions.py  028_severity_4tier.py  029_create_service_heartbeats.py  030_push_multi_recipient.py  031_maintenance_mode.py  032_stuck_at_layer1.py  033_resource_alarm_thresholds.py  034_ml_enabled_flags.py  035_alarm_event_labels.py  036_layer1_extra_rules.py  037_mode_aware_spc.py  038_create_assistant_schema.py  038_wind_turbine_defaults.py  039_alarm_pushed_at.py  (+4 more)
config/: sensors.toml
data/asset_templates/: wind_turbine_v1.yaml
data/knowledge/: README.md  ahu_calismaprensip.md  ahu_filter_dp_yuksek.md  ahu_supply_temp_kontrol.md  alarm_genel_yaklasim.md  booster_pump_basinc_dalgalanma.md  booster_pump_calismaprensip.md  chiller_calismaprensip.md  chiller_cop_dustuk.md  chiller_low_pressure_alarm.md  chiller_short_cycle.md  chiller_yuksek_basinc.md  circulation_pump_calismaprensip.md  circulation_pump_titresim.md  cooling_tower_approach_yuksek.md  cooling_tower_calismaprensip.md  energy_meter_anomali.md  energy_meter_kalibrasyon.md  fcu_aciliyet_alarmlari.md  fcu_calismaprensip.md  hvac_terim_sozlugu.md  lift_station_calismaprensip.md  lift_station_fresh_seviye_alarmi.md  lift_station_waste_seviye_alarmi.md  ornek_chiller_sss.yaml  ornek_chiller_yuksek_basinc.md  qa_ahu.yaml  qa_chiller.yaml  qa_cooling_tower.yaml  qa_energy_meter.yaml  qa_fcu.yaml  (+3 more)
deploy/: Caddyfile.template  README_PILOT.md  custos-assistant.service  custos-critical.service  custos-endurance-metrics.service  custos.service  logrotate.custos  setup.sh
docs/: architecture.md  brief_v1.6.md  brief_v1.7.md  custos_admin_alarm_kilavuzu_v1.md  custos_altyapi_vizyon_ozeti_v1.md  custos_asistan_is_plani_v1.md  custos_is_plani_v1.md  custos_operator_kilavuzu_v1.md  pilot_denetim_plani_v1.md  v1_1_plan.md
scripts/: ae_grid_search.py  analyze_event_leadtime.py  architecture_check.py  augment_faz2_p2_report.py  backup_config_json.py  backup_pg_dump.sh  calibrate_per_asset_thresholds.py  csv_replay_simulator.py  diagslave_drift_simulator.py  endurance_bind_instances.py  endurance_daily_check.py  endurance_generate_avm_tags_csv.py  endurance_generate_tags_csv.py  endurance_metrics.py  endurance_setup.sh  generate_tls_cert.sh  generate_vapid_keys.py  healthcheck.py  modpoll_endurance_sanity.sh  query_last_readings.py  refresh_continuous_aggregates.py  restore_config_json.py  run_wind_pivot_demo.sh  seed_asset_templates.py  seed_maintenance_checklists.py  seed_simulator_tags.py  seed_wind_tags.py  train_anomaly_models.py  train_autoencoder_models.py  train_wind_models_from_csv.py  validate_models_on_care.py  verify_timescale_policies.py  whitelist_audit.py
templates/: ahu.yaml  booster_pump_set.yaml  chiller.yaml  circulation_pump.yaml  cooling_tower.yaml  energy_analyzer.yaml  fcu.yaml  lift_station_fresh.yaml  lift_station_waste.yaml
tests/: assistant_smoke_questions.yaml
tools/: install_tailwind.sh
(+277 files in other folders)
