[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "custos"
version = "0.1.0"
description = "Endüstriyel edge izleme sistemi"
requires-python = ">=3.11"
dependencies = [
    "asyncpg",
    "alembic",
    "pydantic-settings",
    "structlog",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pre-commit",
]

[tool.hatch.build.targets.wheel]
packages = ["src/custos"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
