[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "custos"
version = "0.1.0"
description = "Endüstriyel edge izleme sistemi"
requires-python = ">=3.11"
dependencies = [
    "asyncpg",
    "alembic",
    # psycopg2-binary: alembic sync engine (migration) için. Runtime hala
    # asyncpg kullanır — psycopg2 yalnızca `alembic upgrade head` koşarken
    # aktiftir. asyncpg-native migration (Q3=b, commit 4d92da8) multi-statement
    # migration'ları prepared statement protocol altında reddettiği için
    # (migration 012 alarm_events: CREATE TABLE + 3 CREATE INDEX aynı
    # op.execute()'ta) Q3=(a) fallback'e dönüldü.
    "psycopg2-binary>=2.9",
    "pydantic-settings",
    "pymodbus>=3.6.0,<3.13.0",
    "structlog",
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
    "scikit-learn",
    "numpy",
    "pywebpush",
    "pyarrow>=15.0,<20.0",
    "sentence-transformers>=3.0,<4.0",
    "faiss-cpu>=1.8,<2.0",
    "pyyaml>=6.0,<7.0",
    "lxml>=6.1.0",  # Transitive guard — CVE-2026-41066 XXE fix (6.0.4 HIGH)
    "bcrypt>=4.0,<5.0",  # Parola hash (auth — V11-101)
    # systemd Type=notify + WatchdogSec entegrasyonu (V11-105/K13).
    # Tek dosyalık küçük paket; sistemd yoksa (lokal dev) modül no-op döner.
    "sdnotify>=0.3.2,<0.4",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
    "pre-commit",
]

[tool.hatch.build.targets.wheel]
packages = ["src/custos"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pymodbus.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "joblib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pywebpush.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyarrow.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sentence_transformers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "faiss.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bcrypt.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sdnotify.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
# Geçici eşik: 22 Nisan 2026 baseline %66. Hedef pilot öncesi %75.
# Yükseltme planı (denetim A2 raporu): W3 → 70, W5 → 75. Düşürme = regression.
fail_under = 65
